# py-auto-docs

./: .gitignore  404.html  README.md  SECURITY.MD  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: docs.yml  mkdocs.yml
docs/: example.md
example/: __init__.py  index.html
search/: search_index.json
