[tool.poetry]
name = "py-auto-docs"
version = "0.0.1"
description = "Example module for automatically documenting a python module using mkdocs and mkdocstrings."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
mkdocstrings = "^0.28.1"
mkdocs-material = "^9.5.18"

[tool.poetry.dev-dependencies]
pylint = "^3.3.4"
mypy = "^1.15"
black = "^25.1.0"
pytest = "^8.3.4"
mkdocstrings-python = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
