
[project]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.9"
dependencies = ["zensical>=0.0.2", "mkdocstrings-python>=1.16.12,<2.0.0"]
name = "py-auto-docs"
version = "0.0.1"
description = "Example module for automatically documenting a python module using Zensical and mkdocstrings."
readme = "README.md"

[project.urls]
Homepage = "https://github.com/yaleman/py-auto-docs/"
Documentation = "https://yaleman.github.io/py-auto-docs/"
Repository = "https://github.com/yaleman/py-auto-docs/"

[dependency-groups]
dev = [
    "pylint<4.0.0,>=3.3.9",
    "mypy<2.0,>=1.19",
    "black<26.0.0,>=25.11.0",
    "pytest>=8.4.2,<9.0.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
